--- a/notebooks/Analyses/QuantileGridAggregator.ipynb
+++ b/notebooks/Analyses/QuantileGridAggregator.ipynb
@@ -49,8 +49,8 @@
    "source": [
     "```python\n",
     "import diive as dv\n",
-    "dv.qga()\n",
-    "dv.quantilegridaggregator()  # Alternative\n",
+    "dv.qga(...)\n",
+    "dv.quantilegridaggregator(...)  # Alternative\n",
     "```"
    ]
   },
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.87.1\n"
+      "diive version: v0.88.0\n"
      ]
     }
    ],
@@ -278,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.044 seconds).\n",
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.045 seconds).\n",
       "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
@@ -2146,7 +2146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2025-07-04 16:51:57\n"
+      "Finished 2025-07-04 23:25:28\n"
      ]
     }
    ],
