--- a/notebooks/Plotting/HeatmapYearMonth.ipynb
+++ b/notebooks/Plotting/HeatmapYearMonth.ipynb
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.87.1\n"
+      "diive version: v0.88.0\n"
      ]
     }
    ],
@@ -156,9 +156,175 @@
      "start_time": "2024-08-22T13:27:25.457444Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class HeatmapYearMonth in module diive.core.plotting.heatmap_datetime:\n",
+      "\n",
+      "class HeatmapYearMonth(diive.core.plotting.heatmap_base.HeatmapBase)\n",
+      " |  HeatmapYearMonth(series: pandas.core.series.Series, agg: str = 'mean', ranks: bool = False, cmap: str = None, **kwargs)\n",
+      " |  \n",
+      " |  A class for plotting heatmaps of time series data aggregated by year and month.\n",
+      " |  \n",
+      " |  This class extends HeatmapBase to visualize monthly aggregated time series\n",
+      " |  data, where one axis represents years and the other represents months.\n",
+      " |  It supports different aggregation methods and the display of ranks instead of raw values.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      HeatmapYearMonth\n",
+      " |      diive.core.plotting.heatmap_base.HeatmapBase\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, series: pandas.core.series.Series, agg: str = 'mean', ranks: bool = False, cmap: str = None, **kwargs)\n",
+      " |      Initializes the HeatmapYearMonth object.\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          series: A pandas Series with a datetime-like index, representing\n",
+      " |                  the time series data to be aggregated and plotted.\n",
+      " |          agg: The aggregation method to apply to the monthly data (e.g., 'mean',\n",
+      " |               'sum', 'median', 'min', 'max'). Defaults to 'mean'.\n",
+      " |          ranks: If True, the data will be converted to ranks before plotting.\n",
+      " |                 Defaults to False.\n",
+      " |          cmap: The colormap to use for the heatmap. If None, 'RdYlBu' is used\n",
+      " |                for ranks and 'RdYlBu_r' for raw values.\n",
+      " |          **kwargs: Arbitrary keyword arguments passed to the HeatmapBase\n",
+      " |                    constructor. These can include plotting parameters like\n",
+      " |                    `ax_orientation`, `show_values`, etc.\n",
+      " |  \n",
+      " |  plot(self)\n",
+      " |      Plots the heatmap of year-month aggregated time series data.\n",
+      " |      \n",
+      " |      This method orchestrates the plotting process:\n",
+      " |      1. Calls `plot_pcolormesh` (inherited from HeatmapBase) to render the\n",
+      " |         core heatmap using the `x`, `y`, and `z` data.\n",
+      " |      2. If `self.show_values` is True, it calls `show_vals_in_plot` to\n",
+      " |         overlay the numerical values on the heatmap cells.\n",
+      " |      3. Sets the tick positions and labels for both x and y axes. Since the\n",
+      " |         axes represent months or years (integers), ticks are centered within\n",
+      " |         the cells and labeled with their integer values.\n",
+      " |      4. Optionally hides every second x-axis tick label if `self.show_less_xticklabels` is True,\n",
+      " |         to prevent overcrowding.\n",
+      " |      5. Determines and sets the appropriate x and y axis labels based on\n",
+      " |         `self.ax_orientation`.\n",
+      " |      6. Calls the `format` method (inherited from HeatmapBase) to apply\n",
+      " |         general plot formatting, including axis labels and a title reflecting\n",
+      " |         the aggregation method and frequency.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from diive.core.plotting.heatmap_base.HeatmapBase:\n",
+      " |  \n",
+      " |  export_borderless_heatmap(self, outpath: str)\n",
+      " |      Saves borderless heatmap plots (grayscale heightmap and color texture)\n",
+      " |      for external rendering purposes, such as in Blender.\n",
+      " |      \n",
+      " |      This method generates different versions of the heatmap (grayscale for\n",
+      " |      heightmaps and color for textures, with normal and reversed colormaps).\n",
+      " |      It creates a new figure and axis for each export, ensuring no borders,\n",
+      " |      ticks, or labels are present, making them suitable for direct use as\n",
+      " |      image textures or height maps in 3D rendering software.\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          outpath: The directory path where the generated image files will be saved.\n",
+      " |                   The directory will be created if it does not exist.\n",
+      " |  \n",
+      " |  format(self, ax_xlabel_txt, ax_ylabel_txt, plot, shown_freq: str = None)\n",
+      " |      Applies general formatting to the heatmap plot.\n",
+      " |      \n",
+      " |      This method sets the plot title, configures the colorbar, and applies\n",
+      " |      default axis and spine formatting.\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          ax_xlabel_txt (str): The label for the x-axis.\n",
+      " |          ax_ylabel_txt (str): The label for the y-axis.\n",
+      " |          plot (matplotlib.collections.QuadMesh): The QuadMesh object returned by `pcolormesh`.\n",
+      " |          shown_freq (str, optional): A string indicating the frequency or aggregation\n",
+      " |                                      method of the data, which will be appended to the\n",
+      " |                                      title if provided. Defaults to None.\n",
+      " |  \n",
+      " |  get_ax(self)\n",
+      " |      Returns the Matplotlib Axes object where the plot was generated.\n",
+      " |      \n",
+      " |      Returns:\n",
+      " |          matplotlib.axes.Axes: The Axes object containing the heatmap.\n",
+      " |  \n",
+      " |  get_plot_data(self) -> pandas.core.frame.DataFrame\n",
+      " |      Returns the pivot DataFrame used to plot the heatmap.\n",
+      " |      \n",
+      " |      This DataFrame contains the reshaped data (`self.plotdf`) that forms\n",
+      " |      the grid of values for the heatmap.\n",
+      " |      \n",
+      " |      Returns:\n",
+      " |          pd.DataFrame: The DataFrame used for plotting.\n",
+      " |  \n",
+      " |  plot_pcolormesh(self, shading: str = None)\n",
+      " |      Generates the core pcolormesh plot for the heatmap.\n",
+      " |      \n",
+      " |      This method sets up the colormap, handles missing values, and then\n",
+      " |      uses `matplotlib.pyplot.pcolormesh` to draw the heatmap. It uses\n",
+      " |      the `x`, `y`, and `z` arrays prepared by the subclass.\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          shading: The shading method for `pcolormesh`. Can be 'flat' or 'gouraud'.\n",
+      " |                   Defaults to None, letting Matplotlib choose based on data.\n",
+      " |      \n",
+      " |      Returns:\n",
+      " |          matplotlib.collections.QuadMesh: The QuadMesh object returned by `pcolormesh`.\n",
+      " |  \n",
+      " |  show(self)\n",
+      " |      Generates the heatmap plot and displays the figure.\n",
+      " |      \n",
+      " |      This method calls the `plot` method (which should be implemented by\n",
+      " |      subclasses) to draw the heatmap and then uses `self.fig.show()`\n",
+      " |      to display the generated Matplotlib figure.\n",
+      " |  \n",
+      " |  show_vals_in_plot(self)\n",
+      " |      Overlays numerical values onto the heatmap cells.\n",
+      " |      \n",
+      " |      This method iterates through each cell of the heatmap (`self.z` data)\n",
+      " |      and places the corresponding numerical value as text within the cell.\n",
+      " |      It calculates the center coordinates for each cell based on the\n",
+      " |      `heatmaptype` and formats the value according to `show_values_n_dec_places`.\n",
+      " |      NaN values are displayed as empty strings.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods inherited from diive.core.plotting.heatmap_base.HeatmapBase:\n",
+      " |  \n",
+      " |  set_cmap(cmap, color_bad, z)\n",
+      " |      Sets the colormap and handles missing values for plotting.\n",
+      " |      \n",
+      " |      This static method takes a colormap name, a color for bad/missing values,\n",
+      " |      and the data array. It creates a copy of the colormap and sets the\n",
+      " |      color for NaN values. It also masks invalid (NaN) values in the data\n",
+      " |      array so that the colormap's 'bad' color is applied.\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          cmap (str): The name of the colormap to use.\n",
+      " |          color_bad (str): The color string for missing values.\n",
+      " |          z (np.ndarray): The 2D numpy array of data values.\n",
+      " |      \n",
+      " |      Returns:\n",
+      " |          tuple: A tuple containing:\n",
+      " |                 - `cmap`: The modified Matplotlib colormap object.\n",
+      " |                 - `z`: The masked numpy array with invalid values masked.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from diive.core.plotting.heatmap_base.HeatmapBase:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# help(dv.heatmapyearmonth)  # Accepts parameters for HeatmapBase\n",
+    "help(dv.heatmapyearmonth)  # Accepts parameters for HeatmapBase\n",
     "# help(HeatmapBase)"
    ]
   },
@@ -193,7 +359,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.083 seconds).\n",
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.046 seconds).\n",
       "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
@@ -847,7 +1013,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2025-07-04 16:42:46\n"
+      "Finished 2025-07-04 23:24:59\n"
      ]
     }
    ],
