Add GridAggregator example and streamline notebook structure
Added a new example notebook for GridAggregator with 2D data aggregation and binning. Simplified the structure of the Overview notebook by removing redundant elements and consolidating formatting.

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -55,9 +55,9 @@
     "- [Daily correlation between two time series](Analyses/DailyCorrelation.ipynb)\n",
     "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Decoupling: Sorting bins method](Analyses/DecouplingSortingBins.ipynb)\n",
     "- [Find gaps in time series](Analyses/GapFinder.ipynb)\n",
+    "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.89.0!</span></b> [Grid aggregator](Analyses/GridAggregator.ipynb): Data aggregation over a 2D grid based on specified binning mechanisms.\n",
     "- [Histogram calculation](Analyses/Histogram.ipynb)\n",
-    "- [Percentiles](Analyses/Percentiles.ipynb)\n",
-    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.88.0!</span></b> [Quantile grid aggregator](Analyses/QuantileGridAggregator.ipynb): Calculates aggregated values of a target variable (z) within a 2D grid defined by quantiles of two independent variables (x and y)."
+    "- [Percentiles](Analyses/Percentiles.ipynb)"
    ]
   },
   {
