Remove QuantileGridAggregator and associated references
Completely removes `QuantileGridAggregator` implementation and all related code references, including tests, examples, and documentation. Replaces references with the updated `GridAggregator` class. Streamlines codebase by eliminating outdated functionality.

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 5 Jul 2025  \n",
+    "**Last updated**: 23 Jul 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -55,7 +55,7 @@
     "- [Daily correlation between two time series](Analyses/DailyCorrelation.ipynb)\n",
     "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Decoupling: Sorting bins method](Analyses/DecouplingSortingBins.ipynb)\n",
     "- [Find gaps in time series](Analyses/GapFinder.ipynb)\n",
-    "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.89.0!</span></b> [Grid aggregator](Analyses/GridAggregator.ipynb): Data aggregation over a 2D grid based on specified binning mechanisms.\n",
+    "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.89.0!</span></b> [Grid aggregator](Analyses/GridAggregator.ipynb): Aggregate Z-axis data on a 2D grid by binning X and Y data using quantiles, equal-width, or custom methods, supports various aggregation functions.\n",
     "- [Histogram calculation](Analyses/Histogram.ipynb)\n",
     "- [Percentiles](Analyses/Percentiles.ipynb)"
    ]
